# jupyter-live

./: README.md  pyproject.toml
src/: __init__.py  __main__.py  application.py  converter.py  watcher.py
src/commands/: __init__.py  watch_command.py
